--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -428,15 +428,15 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qRd-Z2-rPM">
-                                                            <rect key="frame" x="8" y="0.0" width="359" height="475"/>
+                                                            <rect key="frame" x="28" y="0.0" width="319" height="475"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="HpL-Ob-RJg">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="463"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="319" height="463"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="noConversationImage" translatesAutoresizingMaskIntoConstraints="NO" id="pFc-6t-uaU">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="359" height="240"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="319" height="319"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="height" constant="240" id="cBt-mt-CbD"/>
+                                                                                <constraint firstAttribute="width" secondItem="pFc-6t-uaU" secondAttribute="height" id="dv5-WW-h5d"/>
                                                                             </constraints>
                                                                             <userDefinedRuntimeAttributes>
                                                                                 <userDefinedRuntimeAttribute type="number" keyPath="hippoBorderWidth">
@@ -446,24 +446,24 @@
                                                                                     <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 </userDefinedRuntimeAttribute>
                                                                                 <userDefinedRuntimeAttribute type="number" keyPath="hippoCornerRadius">
-                                                                                    <real key="value" value="8"/>
+                                                                                    <real key="value" value="0.0"/>
                                                                                 </userDefinedRuntimeAttribute>
                                                                             </userDefinedRuntimeAttributes>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" text="Text will go here..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXW-c9-pti">
-                                                                            <rect key="frame" x="12" y="252" width="335" height="17"/>
+                                                                            <rect key="frame" x="12" y="331" width="295" height="16"/>
                                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Text will go here..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLP-2x-caT">
-                                                                            <rect key="frame" x="12" y="281" width="335" height="78"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Text will go here..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLP-2x-caT">
+                                                                            <rect key="frame" x="12" y="359" width="295" height="0.0"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YjT-Zu-gzX">
-                                                                            <rect key="frame" x="130" y="371" width="99" height="40"/>
+                                                                            <rect key="frame" x="110" y="371" width="99" height="40"/>
                                                                             <color key="backgroundColor" red="1" green="0.58431372549019611" blue="0.0" alpha="0.69935929694143284" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="40" id="2Ov-Sd-Wnp"/>
@@ -481,7 +481,7 @@
                                                                             </userDefinedRuntimeAttributes>
                                                                         </button>
                                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wak-Ty-RKn">
-                                                                            <rect key="frame" x="130" y="423" width="99" height="40"/>
+                                                                            <rect key="frame" x="110" y="423" width="99" height="40"/>
                                                                             <color key="backgroundColor" red="1" green="0.58431372550000005" blue="0.0" alpha="0.69935929689999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="40" id="Kmv-zW-3Q5"/>
@@ -504,8 +504,8 @@
                                                                         <constraint firstItem="VLP-2x-caT" firstAttribute="trailing" secondItem="cXW-c9-pti" secondAttribute="trailing" id="Kuk-IP-Elx"/>
                                                                         <constraint firstItem="YjT-Zu-gzX" firstAttribute="width" relation="lessThanOrEqual" secondItem="HpL-Ob-RJg" secondAttribute="width" constant="-24" id="Q9i-wU-JmH"/>
                                                                         <constraint firstAttribute="trailing" secondItem="cXW-c9-pti" secondAttribute="trailing" constant="12" id="RAI-Sl-FuN"/>
-                                                                        <constraint firstItem="pFc-6t-uaU" firstAttribute="width" secondItem="HpL-Ob-RJg" secondAttribute="width" id="b1l-Ec-mh2"/>
                                                                         <constraint firstItem="wak-Ty-RKn" firstAttribute="width" relation="lessThanOrEqual" secondItem="HpL-Ob-RJg" secondAttribute="width" constant="-24" id="eBX-bl-Gf4"/>
+                                                                        <constraint firstItem="pFc-6t-uaU" firstAttribute="width" secondItem="HpL-Ob-RJg" secondAttribute="width" id="gGx-On-mQF"/>
                                                                         <constraint firstItem="cXW-c9-pti" firstAttribute="leading" secondItem="HpL-Ob-RJg" secondAttribute="leading" constant="12" id="qAo-P3-IqH"/>
                                                                     </constraints>
                                                                     <userDefinedRuntimeAttributes>
@@ -531,9 +531,9 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="qRd-Z2-rPM" secondAttribute="bottom" id="0hZ-Lf-yZk"/>
-                                                        <constraint firstAttribute="trailing" secondItem="qRd-Z2-rPM" secondAttribute="trailing" constant="8" id="aOC-e2-rs1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="qRd-Z2-rPM" secondAttribute="trailing" constant="28" id="aOC-e2-rs1"/>
                                                         <constraint firstItem="qRd-Z2-rPM" firstAttribute="top" secondItem="EQh-02-Z0e" secondAttribute="top" id="rgi-3O-4fs"/>
-                                                        <constraint firstItem="qRd-Z2-rPM" firstAttribute="leading" secondItem="EQh-02-Z0e" secondAttribute="leading" constant="8" id="wq1-rL-9FU"/>
+                                                        <constraint firstItem="qRd-Z2-rPM" firstAttribute="leading" secondItem="EQh-02-Z0e" secondAttribute="leading" constant="28" id="wq1-rL-9FU"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <size key="customSize" width="375" height="475"/>
